<resources>
    <string name="app_name">Weather App</string>
    <string name="BASE_URL">http://api.openweathermap.org/data/2.5/</string>
    <string name="API_KEY">9ecde7b8e13078924e82d5bc2a8f48ec</string>
    <string name="URL">community-open-weather-map.p.rapidapi.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_country">Enugu, Nigeria</string>
    <string name="date_today">Friday, 8 July</string>
    <string name="current_temperature">26</string>
    <string name="weather_information">Partly Cloud</string>
    <string name="temp_information">26, partly cloudy</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">18 km/h</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_rate">73%</string>
    <string name="day_of_week">Mon</string>
    <string name="location_hints">Type city or postcode</string>
    <string name="location_example">Example Malmo, Sweden</string>
    <string name="add_new_location">Add new location</string>
    <string name="stored_location">You can only store 5 locations</string>
    <string name="permission_notice">This permission is important but you can as well set your location on Location page</string>
    <string name="go_to_location">Go to location setting</string>
    <string name="home">Home</string>
    <string name="filter">filter</string>
    <string name="add">Add</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="back_press">Press once again to exit</string>
    <string name="no_city">No City Added</string>
    <string name="ineternet_connection">Please make sure you are connected to Internet!</string>
    <string name="city_delete">City deleted successfully.</string>

</resources>
